After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736796 - videoencoder: do not leak events when flushing them
videoencoder: do not leak events when flushing them
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.4.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-17 12:09 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-09-19 06:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
videoencoder: do not leak events when flushing them (1.16 KB, patch)
2014-09-17 12:09 UTC, Ognyan Tonchev (redstar_)
committed Details | Review
videodecoder: do not leak events when flushing them (1.16 KB, patch)
2014-09-17 12:12 UTC, Ognyan Tonchev (redstar_)
committed Details | Review
audioencoder: do not leak events when flushing them (1.16 KB, patch)
2014-09-17 12:19 UTC, Ognyan Tonchev (redstar_)
committed Details | Review
streamsplitter: do not leak events when flushing them (1.18 KB, patch)
2014-09-17 12:35 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-09-17 12:09:46 UTC
Created attachment 286363 [details] [review]
videoencoder: do not leak events when flushing them

events are leaked
Comment 1 Ognyan Tonchev (redstar_) 2014-09-17 12:12:09 UTC
Created attachment 286364 [details] [review]
videodecoder: do not leak events when flushing them
Comment 2 Ognyan Tonchev (redstar_) 2014-09-17 12:19:33 UTC
Created attachment 286365 [details] [review]
audioencoder: do not leak events when flushing them
Comment 3 Ognyan Tonchev (redstar_) 2014-09-17 12:35:08 UTC
Created attachment 286367 [details] [review]
streamsplitter: do not leak events when flushing them
Comment 4 Sebastian Dröge (slomo) 2014-09-18 09:41:02 UTC
commit d9e67777e037bc38a63155c3172dc7e6ade180f3
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Sep 17 14:34:25 2014 +0200

    streamsplitter: do not leak events when flushing them
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736796

commit 2fff66b071da4800a276538a4f4496225d2c5f63
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Sep 17 14:18:49 2014 +0200

    audioencoder: do not leak events when flushing them
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736796

commit 29f548a7cd10ee22060afe16f81db080ca66f202
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Sep 17 14:11:21 2014 +0200

    videodecoder: do not leak events when flushing them
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736796

commit d8260cdb895237dfbb8d7cc225214fb2e6ddda09
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Sep 17 14:08:17 2014 +0200

    videoencoder: do not leak events when flushing them
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736796