streamsplitter: do not leak events when flushing them

https://bugzilla.gnome.org/show_bug.cgi?id=736796